function (add_exec source output)
  add_executable(${output} ${source})
  target_link_libraries(${output} PRIVATE tpl_project_options tpl_project_warnings tpl_core)
endfunction()

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -save-temps -fno-verbose-asm -ffunction-sections")
add_exec("example_1.cpp" example_1)
add_exec("example_2.cpp" example_2)
add_exec("example_3.cpp" example_3)
add_exec("example_4.cpp" example_4)
add_exec("example_5.cpp" example_5)
add_exec("example_6.cpp" example_6)
add_exec("throughput_test.cpp" throughput_test)

add_subdirectory(chat)
